--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -9,3 +9,4 @@ RUN make -j8
 
 FROM ubuntu:20.04 as package
 COPY --from=builder /repo/minigraph /
+COPY --from=builder /repo/test/MT.gfa /repo/test/MT.gfa
